--- a/client/views/header.html
+++ b/client/views/header.html
@@ -8,13 +8,21 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">SocHub</a>
+        <a class="navbar-brand" href="{{pathFor 'feed'}}">SocHub</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="{{pathFor 'feed'}}">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          {{#if currentUser}}
+            <li><a href="#logout">Logout</a></li>
+          {{else}}
+            <li><a href="{{pathFor 'login_form'}}">Login</a></li>
+            <li><a href="{{pathFor 'register_form'}}">Register</a></li>
+          {{/if}}
         </ul>
       </div><!--/.nav-collapse -->
     </div>
