--- a/client/views/index.html
+++ b/client/views/index.html
@@ -18,6 +18,7 @@
           <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle Nav</button>
         </p>
         <div class="row">
+          {{yield 'flash'}}
           {{yield}}
         </div>
       </div>
